--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
   </tr>
   <footer>
       <p>Data taken from <a href="http://pds.jpl.nasa.gov/planets/special/planets.htm"></p>
+    </footer>
 </body>
 </html>
