--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <td>243.02 (retrograde)</td>
     <td>224.7</td>
   </tr>
-  <footer>Data taken from <a href="http://pds.jpl.nasa.gov/planets/special/planets.htm"></footer>
+  <footer>
+      <p>Data taken from <a href="http://pds.jpl.nasa.gov/planets/special/planets.htm>"http://pds.jpl.nasa.gov</a></p> 
+  </footer>
 </body>
 </html>
