--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
     <td>243.02 (retrograde)</td>
     <td>224.7</td>
   </tr>
-  <footer>
-      <p>Data taken from <a href="http://pds.jpl.nasa.gov/planets/special/planets.htm>"http://pds.jpl.nasa.gov</a></p> 
-  </footer>
+  <img src="http://www.astro.caltech.edu/observatories/coo/images/p200Sunset.crop.jpg" alt="astro">
 </body>
 </html>
