--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
     <td>243.02 (retrograde)</td>
     <td>224.7</td>
   </tr>
+  <img src="/new-zeland-and-australia-seen-from-outer-space-istock.jpg" alt-"view"
 </body>
 </html>
