--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
     <td>243.02 (retrograde)</td>
     <td>224.7</td>
   </tr>
-  <img src="https://github.com/rcourtney1/randall_courtney_lab5/blob/master/new-zeland-and-australia-seen-from-outer-space-istock.jpg" alt-"view"
+  <img src="https://github.com/rcourtney1/randall_courtney_lab5/blob/master/new-zeland-and-australia-seen-from-outer-space-istock.jpg" alt-"view">
 </body>
 </html>
