--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>My Four Planets</header>
    <section id="space">
-    <h1><image src="https://i.ytimg.com/vi/fVMgnmi2D1w/maxresdefault.jpg" alt="view"><strong>Space the Final Frontier</strong><image src=https://i.ytimg.com/vi/fVMgnmi2D1w/maxresdefault.jpg" alt="view"></h1>
+    <h1><img src="http://en.es-static.us/upl/2001/07/apollo_8_earthrise.jpeg" alt="view"><strong>Space the Final Frontier</strong><img src=http://en.es-static.us/upl/2001/07/apollo_8_earthrise.jpeg" alt="view"></h1>
    </section>  
 <table id="planetdata">
   <tr>
