--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
     <td>224.7</td>
   </tr>
 </table>
+ <footer>
+  <p>Data taken from <a href="http://pds.jpl.nasa.gov/planets/special/planets.htm">nasa.gov</a>.</p>
+ </footer>
 </body>
 </html>
