--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </tr>
 </table>
  <footer>
-  <p>Data taken from <a href="http://pds.jpl.nasa.gov/planets/special/planets.htm">nasa.gov</a>.</p>
+  <p>Data taken from <a href="http://pds.jpl.nasa.gov/planets/special/planets.htm">http://pds.jpl.nasa.gov/planets/special/planets.htm</a>.</p>
  </footer>
 </body>
 </html>
